--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "mongodb": "^4.9.1",
-    "string-strip-html": "^11.6.2"
+    "string-strip-html": "^11.6.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
